# AVBridge

./: CMakeLists.txt  README.md
include/: AVBridgeEnv.h  env.h
include/core/: BigEndian.h  ByteBuffer.h  Crypto.h  Hmac_sha256.hpp  IPlugin.h  Slice.h
libs/debug/: libcrypto.lib
plugins/plugin-rtmp/: CMakeLists.txt
plugins/plugin-rtmp/src/: Exception.h  HandShake.cpp  HandShake.h  HandleShake.cpp  Msg.cpp  Msg.h  PluginRTMP.cpp  PluginRTMP.h  RTMP.h  RTMPClient.cpp  RTMPClient.h
src/: AVBridge.cpp  AVBridge.h  EasyNvr.cpp  EasyNvr.h  PluginManager.cpp  PluginManager.h  main.cpp
